@@ -21,6 +21,7 @@ import ch.qa.testautomation.tas.exception.ExceptionBase;
 import ch.qa.testautomation.tas.exception.ExceptionErrorKeys;
 import org.junit.jupiter.api.DynamicTest;
 
+import java.io.File;
 import java.lang.annotation.Annotation;
 import java.lang.reflect.Field;
 import java.lang.reflect.InvocationTargetException;
@@ -92,13 +93,14 @@ public class TestCaseObject implements Comparable<TestCaseObject> {
         this.description = testCase.getDescription();
         initTestObjects(testCase.getTestObjectNames());
         testDataContainer = new TestDataContainer(testDataContent, testCase.getAdditionalTestDataFile());
+        //parameterized Tests
         testRunResult.setParameters(testDataContent.getFirst());
         initTestSteps(testCase.getSteps());
         testRunResult.setDescription(description);
         setTestCaseId(testCase.getTestCaseId());
         setTestCaseIdMap(testCase.getTestCaseIdMap());
-        if (isValid(testDataContent.get(0).get("seriesNumber"))) {
-            seriesNumber = testDataContent.get(0).get("seriesNumber").toString();
+        if (isValid(testDataContent.getFirst().get("seriesNumber"))) {
+            seriesNumber = testDataContent.getFirst().get("seriesNumber").toString();
         }
     }
 
@@ -301,6 +303,8 @@ public class TestCaseObject implements Comparable<TestCaseObject> {
             DriverManager.closeDriver();
             PropertyResolver.setKeepBrowserOnErrorEnabled(previewSetting);//reset to preview
         }
+        //remove chrome profile
+        FileOperation.deleteFolder(new File(PropertyResolver.getBrowserProfileDir()));
     }
 
     /**
